// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing initRouting() Should check if endpoint supports the method it's assigned to within DependsOnMethod 1`] = `"Endpoint assigned to post method of /v1/user must support post method"`;

exports[`Routing initRouting() Should throw an error in case of slashes in route 1`] = `
"Routing elements should not contain '/' character.
The error caused by '/v1' route that has a 'user/retrieve' entry."
`;

exports[`Routing initRouting() Should throw an error in case of slashes in route 2`] = `
"Routing elements should not contain '/' character.
The error caused by 'v1/user/retrieve' entry."
`;
